# ezfish_pipeline

./: .gitignore  4_create_visual_overlay.ipynb  CLAUDE.MD  FIGURE_NOTEBOOKS.md  LICENSE  README  README.MD  environment.yml  ezfish_all_cp4_environment.yml  ezfish_all_cp4_environment_v2.yml  ezfish_all_environment.yml  ezfish_all_environment_v2.yml  gather_env_info.sh  master_pipeline copy.py  master_pipeline.py  pyproject.toml  requirements  visualization_funcs.py
agent_docs/: auto_stitching.md  file_conventions.md  lowres_to_hires_registration.md  parameter_tuning.md  pipeline_architecture.md  pipeline_modes.md  registration_guide.md  resume_and_reentry.md  segmentation.md  troubleshooting.md
docs/: README.md  conf.py  index.rst  installation.rst  pipeline_overview.rst  quickstart.rst  refactor_easipass_ingest.md  requirements.txt
docs/api/: bigstream_functions.rst  functional.rst  index.rst  master_pipeline.rst  meta.rst  registrations.rst  segmentation.rst  tiling.rst
examples/: BIG100.hjson  CIM130.hjson  CIM132.hjson  JSA2691R_test.hjson  PS043.hjson  PS043_SA.hjson  RG023.hjson  RG026.hjson  RG026.json  demo.hjson  demo.json  demo_hcr_only.hjson  demo_hires.hjson  demo_standard.hjson  demo_tiff.hjson  demo_tiff_minimal.hjson  file_stracture.txt  param_example.hjson
src/: __init__.py  analysis_utils.py  auto_stitching.py  automation.py  bigstream_functions.py  functional.py  hcr_centroid_registration.py  importers.py  meta.py  registrations.py  registrations_funcs.py  registrations_landmarks.py  registrations_utils.py  segmentation.py  somaprint.py  somaprint_hcr.py  tiling.py
src/processing_notebooks/: 3D_Image_Smoothing_and_Interpolation.ipynb
src/processing_notebooks/HCR_rounds/: 1_scan_lowres_parameters.ipynb  2_scan_highres_parameters.ipynb  3_apply_registration.ipynb  4_create_visual_overlay.ipynb  reg_imports.py
