[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ezfish-pipeline"
version = "0.1.0"
description = "Automated image processing pipeline for 2-photon microscopy and HCR confocal imaging"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
license-files = ["LICENSE"]

# Core dependencies — needed for the main pipeline (master_pipeline.py + src/)
dependencies = [
    # Scientific stack
    "numpy>=1.26,<2",
    "scipy>=1.9",
    "pandas>=2.0",
    "scikit-image>=0.21",

    # Image I/O
    "tifffile>=2022.10",
    "imagecodecs",
    "imageio",
    "pillow",
    "opencv-python>=4.10",

    # Registration
    "SimpleITK==2.3.1",

    # Segmentation
    "cellpose>=3.1",

    # Visualization (used in core pipeline for QC outputs)
    "matplotlib>=3.9",

    # Config & I/O
    "hjson",
    "pyyaml",
    "zarr>=2.12",
    "h5py>=3.8",
    "numcodecs>=0.9",
    "pydantic>=2.7",
    "flatten_json",

    # CLI & output
    "tqdm",
    "rich",
    "natsort",
    "joblib",

    # Fast remapping for segmentation masks
    "fastremap>=1.15",
]

[project.optional-dependencies]

# 2-photon processing (suite2p + ScanBox reader)
twop = [
    "suite2p>=0.14.4",
    "sbxreader>=0.2.2",
    "roifile",
]

# BigStream registration and its dependencies
bigstream = [
    "bigstream @ git+https://github.com/orena1/bigstream.git",
    "ClusterWrap @ git+https://github.com/GFleishman/ClusterWrap.git@fa718ac49",
    "fishspot>=0.3",
    "morphsnakes>=2.0",
    "pynrrd>=1.0",
    "dask>=2023.10",
    "distributed>=2023.10",
    "dask-jobqueue>=0.9",
    "numba>=0.60",
]

# Interactive notebooks (HCR-HCR registration, analysis, figures)
notebooks = [
    "jupyterlab>=4.3",
    "ipykernel",
    "ipympl>=0.9",
    "ipywidgets>=8.1",
    "seaborn>=0.13",
    "plotly>=5.0",
]

# Analysis notebooks (dimensionality reduction, statistics, ML)
analysis = [
    "scikit-learn>=1.5",
    "umap-learn>=0.5.6",
    "xgboost>=2.1",
    "statsmodels>=0.14",
]

# Everything
all = [
    "ezfish-pipeline[twop,bigstream,notebooks,analysis]",
]

[project.scripts]
ezfish = "master_pipeline:main"

[tool.setuptools]
py-modules = ["master_pipeline"]

[tool.setuptools.packages.find]
include = ["src*"]
